# tech-titans-CSPB3308-project

./: .gitignore  PAGE_TESTING.md  README.md  SQL_TESTING.md  USER_STORIES.md  WEEKLY_STATUS.md  mockup.html
backend/brick-oracle-api/: .gitignore  README.md  main.py  pyproject.toml
backend/brick-oracle-api/src/: __init__.py  config.py  extensions.py
backend/brick-oracle-api/src/catalog/: __init__.py  csv_source.py  loader.py  repository.py  seed.py  triggers.py  verify.py
backend/brick-oracle-api/src/models/: __init__.py  catalog.py
backend/brick-oracle-api/tests/: conftest.py  test_catalog_seed.py
frontend/brick-oracle/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/brick-oracle/src/: app.tsx  index.css  main.tsx  routeTree.gen.ts  router.tsx
frontend/brick-oracle/src/auth/: auth-api.ts  auth-context.tsx  auth-react-context.ts  require-auth.ts  storage.ts  types.ts  use-auth.ts
frontend/brick-oracle/src/pages/: collection-page.tsx  index-page.tsx  site-layout.tsx
frontend/brick-oracle/src/pages/auth/: auth-layout.tsx  login-page.tsx  register-page.tsx
frontend/brick-oracle/src/pages/sets/: set-detail-page.tsx  sets-page.tsx
frontend/brick-oracle/src/routes/: __root.tsx  collection.tsx  index.tsx
frontend/brick-oracle/src/routes/auth/: index.tsx  register.tsx  route.tsx
frontend/brick-oracle/src/routes/sets/: $id.tsx  index.tsx
