[project]
name = "brick-oracle-api"
version = "0.1.0"
description = "Brick Oracle Flask API with immutable Rebrickable catalog"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
extraPaths = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
